--- a/templates/oneroom/detail.html
+++ b/templates/oneroom/detail.html
@@ -113,6 +113,38 @@
             width: 80px;
             height: 80px;
         }
+
+        /* MODAL */
+        .modal_background {
+            position: fixed;
+            top: 0;
+            width: 100vw;
+            height: 100vh;
+            background-color: black;
+
+            opacity: 0.7;
+        }
+
+        /* CONTACT */
+        .contact_window {
+            width: 250px;
+            height: 300px;
+            background-color: white;
+            position: fixed;
+            z-index: 3;
+            top: 30%;
+            left: 45%;
+            border-radius: 5px;
+        }
+
+        .x_btn {
+            background-color: white;
+            border: none;
+        }
+
+        .none {
+            display: none;
+        }
     </style>
 
     <table class="table table-bordered">
@@ -229,7 +261,31 @@
                 <div class="another_rooms_content">월세 30</div>
             </li>
         </ul>
-
     </div>
+    <script>
+        const body = document.querySelector('body');
+        const contact_btn = document.querySelector('.show_contact');
 
+        contact_btn.addEventListener('click', showContact);
+
+        function showContact() {
+            const modal_background = document.createElement('div');
+            modal_background.classList.add('modal_background');
+
+            const contact_window = document.createElement('div');
+            contact_window.classList.add('contact_window');
+
+            const x_btn = document.createElement('button');
+            x_btn.textContent = 'X';
+            x_btn.classList.add('x_btn');
+            x_btn.addEventListener('click', () => {
+                contact_window.classList.add('none');
+                modal_background.classList.add('none');
+            });
+
+            contact_window.appendChild(x_btn);
+            body.appendChild(contact_window);
+            body.appendChild(modal_background);
+        }
+    </script>
 {% endblock %}
