--- a/templates/oneroom/index.html
+++ b/templates/oneroom/index.html
@@ -51,7 +51,7 @@
                         type: '원룸',
                         space: '7평',
                         latlng: new kakao.maps.LatLng({{ data.latitude }}, {{ data.longitude }}), // 원룸 좌표
-
+                        id: {{ data.id }},
                     },
                 {% endfor %}
             {% endif %}
@@ -77,7 +77,8 @@
                 title: positions[i].title,
                 price: positions[i].price,
                 type: positions[i].type,
-                space: positions[i].space
+                space: positions[i].space,
+                id: positions[i].id,
             }
 
             // 마커를 생성하고 지도위에 표시합니다
@@ -110,6 +111,11 @@
                 // 클릭된 마커가 없고, click 마커가 클릭된 마커가 아니면
                 // 마커의 이미지를 클릭 이미지로 변경합니다
                 if (!selectedMarker || selectedMarker !== marker) {
+                    // 기존 item 들을 삭제합니다.
+                    while (itemList.firstChild) {
+                        itemList.removeChild(itemList.firstChild);
+                    }
+                    // 클릭한 마커에 해당되는 list 보여주기
                     setListItem(info);
                 }
 
@@ -118,29 +124,6 @@
             });
         }
 
-        function setListItem(info) {
-            // 기존 item 들을 삭제합니다.
-            while (itemList.firstChild) {
-                itemList.removeChild(itemList.firstChild);
-            }
-
-            const roomInfo =
-                `
-        <a href="#">
-            <li>
-                <div style="margin-right:30px"><img width="80px" height="80ox" src="https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/markers_sprites2.png" alt="This is a preview image of the room."></div>
-                <div>
-                    <p>
-                        <h3>${info.title}</h3>
-                        <span>${info.price}</span>
-                        <span>${info.space}</span>
-                    </p>
-                </div>
-            </li>
-        </a>
-    `
-            itemList.innerHTML = roomInfo;
-        }
 
         // MakrerImage 객체를 생성하여 반환하는 함수입니다
         function createMarkerImage(markerSize, offset, spriteOrigin) {
@@ -157,28 +140,39 @@
             return markerImage;
         }
 
-        // 아이템 전부 표시
+        // 첫 로드시 리스트에 방들을 전부 보여주는 함수
         function showAllItems(info) {
-            // 기존 item 들을 삭제합니다.
             const item = document.createElement('li');
             itemList.appendChild(item);
 
-            const roomInfo =
-                `
-        <a href="#">
-            <li>
-                <div style="margin-right:30px"><img width="80px" height="80ox" src="https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/markers_sprites2.png" alt="This is a preview image of the room."></div>
-                <div>
-                    <p>
-                        <h3>${info.title}</h3>
-                        <span>${info.price}</span>
-                        <span>${info.space}</span>
-                    </p>
-                </div>
-            </li>
-        </a>
-    `
+            const roomInfo = roomListItem(info);
+
             item.innerHTML = roomInfo;
+        }
+
+        // 마커 클릭시 리스트에 방들을 보여주는 함수
+        function setListItem(info) {
+            const roomInfo = roomListItem(info);
+
+            itemList.innerHTML = roomInfo;
+        }
+
+        // 리스트에 들어갈 요소들을 묶어서 한번에 반환하는 함수
+        function roomListItem(info) {
+            return `
+                    <a onclick="location.href='detail/' + ${info.id}">
+                        <li>
+                            <div style="margin-right:30px"><img width="80px" height="80ox" src="https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/markers_sprites2.png" alt="This is a preview image of the room."></div>
+                            <div>
+                                <p>
+                                    <h3>${info.title}</h3>
+                                    <span>${info.price}</span>
+                                    <span>${info.space}</span>
+                                </p>
+                            </div>
+                        </li>
+                    </a>
+                `
         }
     </script>
 {% endblock %}
