--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,8 +1,13 @@
+{% load static %}
+<link rel="stylesheet" href="{% static 'nav.css' %}">
 <nav>
     <ul>
-        <li class="logo">toch</li>
-        <li><a href="{% url 'oneroom:index' %}">원룸</a></li>
-        <li><a href="{% url 'usedtrade:index' %}">중고거래</a></li>
-        <li><a href="#">커뮤니티</a></li>
+        <li class="nav_list logo">toch</li>
+        <li class="nav_list"><a href="{% url 'oneroom:index' %}">원룸</a></li>
+        <li class="nav_list"><a href="{% url 'usedtrade:index' %}">중고거래</a></li>
+        <li class="nav_list"><a href="#">커뮤니티</a></li>
+        <li class="message"><a>메세지</a></li>
+        <li class="mypage"><a>마이페이지</a></li>
+
     </ul>
 </nav>
