--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -7,7 +7,7 @@
         <li class="nav_list"><a href="{% url 'usedtrade:index' %}">중고거래</a></li>
         <li class="nav_list"><a href="#">커뮤니티</a></li>
         <li class="message"><a>메세지</a></li>
-        <li class="mypage"><a>마이페이지</a></li>
+        <li class="mypage"><a href="{% url 'one' %}>마이페이지</a></li>
 
     </ul>
 </nav>
