--- a/templates/common/mypage.html
+++ b/templates/common/mypage.html
@@ -1,28 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
-
 {% block content %}
-    <style>
-        .title, .common_container, aside, main{
-            border: 1px solid black;
-        }
-        .title{
-            height: 6vh;
-        }
-        .common_container{
-            width: 100%;
-            padding: 0;
-            display: flex;
-            height: 88vh;
-            margin: 0;
-        }
-        aside{
-            flex:1;
-        }
-        main{
-            flex:3;
-        }
-    </style>
+    <link rel="stylesheet" href="{% static 'common/common_mypage.css' %}">
 
     <div class="title">
         <h3>마이페이지</h3>
@@ -32,10 +11,23 @@
             <div>마이페이지</div>
             <div>중고거래</div>
             <div>커뮤니티</div>
-            <div> ··· </div>
+            <div> ···</div>
         </aside>
         <main>
-            내용
+            <div class="user_info">
+                <div class="user_info_title">회원정보</div>
+                <div class="user_info_title_profile">
+                    <div>프로필</div>
+                </div>
+                <div class="user_info_content">
+                    <div class="user_info_img">사진업로드</div>
+                    <div class="user_info_stat">개인정보</div>
+                </div>
+                <div class="user_info_button">
+                    <button>수정</button>
+                    <button>돌아가기</button>
+                </div>
+            </div>
         </main>
     </div>
 {% endblock %}
