--- a/static/css/page.css
+++ b/static/css/page.css
@@ -129,7 +129,7 @@
 .findArea fieldset ul li:not(:last-child){margin-bottom: 10px;}
 .loginPage fieldset ul li input:not([type="submit"]),
 .loginPage fieldset ul li select{height: 40px; border: 1px solid #cacaca; padding: 0 15px; box-sizing: border-box;}
-.loginPage fieldset ul li select{background: url('../../templates/로그인 마이페이지/images/selectIcon.png') no-repeat right 10px center;}
+.loginPage fieldset ul li select{background: url('../images/selectIcon.png') no-repeat right 10px center;}
 .loginPage fieldset ul li > input:not([type="submit"]),
 .loginPage fieldset ul li > select{width: 100%;}
 .loginPage fieldset ul li input:not([type="submit"])::placeholder{font-size: 16px; color: #888888;}
@@ -169,6 +169,15 @@
 .joinArea fieldset ul li > div button{width: 110px;}
 .joinArea fieldset ul li > div input{flex: 1; width: 0px;}
 .joinArea fieldset ul li > div button{color: white; font-weight: 800; background-color: #888888;}
+input[type=password] {
+    font-family: "나눔스퀘어 아닐때 쓸 글꼴";
+
+    &::placeholder {
+        font-family: "NanumSquare";
+    }
+}
+.joinArea fieldset input[type="password"]{ font-family: Serif;  &::placeholder {
+        font-family: "NanumSquare";}}
 .joinArea fieldset input[type="submit"]{width: 100%; height: 45px; font-size: 18px; font-weight: 800; color: white; background-color: black;}
 
 
