--- a/templates/common/signup.html
+++ b/templates/common/signup.html
@@ -7,16 +7,16 @@
                     <legend>회원가입</legend>
                     <ul>
                         <li>
-                            <label for="">아이디</label>
-                            <input type="text" placeholder="아이디">
+                            <label for="id_input">아이디</label>
+                            <input type="text" placeholder="아이디" id="id_input">
                         </li>
                         <li>
-                            <label for="">비밀번호</label>
-                            <input type="password" placeholder="비밀번호">
+                            <label for="pass_input">비밀번호</label>
+                            <input type="password" placeholder="비밀번호" id="pass_input">
                         </li>
                         <li>
-                            <label for="">비밀번호 확인</label>
-                            <input type="password" placeholder="비밀번호 확인">
+                            <label for="pass_check_input">비밀번호 확인</label>
+                            <input type="password" placeholder="비밀번호 확인" id="pass_check_input">
                         </li>
                         <li>
                             <label for="">이름</label>
