--- a/templates/common/usedtrade_chat.html
+++ b/templates/common/usedtrade_chat.html
@@ -1,103 +1,84 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-    <div class="subPage myPage">
+<div class="subPage myPage">
 
 
-        <section class="width1200 myArea">
-            <h2>메인페이지</h2>
-            <ul class="menuBox">
-                <li>
-                    <a href="{% url 'common:mypage' %}">회원정보</a>
-                </li>
-                <li class="active">
-                    <a href="{% url 'common:usedtrade_chat' 0 %}" data-count="3">중고거래</a>
-                </li>
-                <li>
-                    <a href="{% url 'common:community_chat' %}" data-count="3">커뮤니티</a>
-                </li>
-                <li>
-                    <a href="{% url 'common:service' %}">문의</a>
-                </li>
-            </ul>
+    <section class="width1200 myArea">
+        <h2>메인페이지</h2>
+        <ul class="menuBox">
+            <li>
+                <a href="{% url 'common:mypage' %}">회원정보</a>
+            </li>
+            <li class="active">
+                <a href="{% url 'common:usedtrade_chat' 0 %}" data-count="3">중고거래</a>
+            </li>
+            <li>
+                <a href="{% url 'common:community_chat' %}" data-count="3">커뮤니티</a>
+            </li>
+            <li>
+                <a href="{% url 'common:service' %}">문의</a>
+            </li>
+        </ul>
 
-            <div class="tolkBox usedArea">
-                <div class="tolkList">
-                    <ul>
-                        {% for data in data %}
-                            <li class="active">
-                                <b>{{ data.author }}</b>
-                                <time>{{ data.create_date }}</time>
-                                <p>{{ data.content }}</p>
-                                <span>3</span>
-                            </li>
-                        {% endfor %}
-                    </ul>
+        <div class="tolkBox usedArea">
+            <div class="tolkList">
+                <ul>
+                    {% for chatroom in chatroom %}
+                        <li class="active" onclick="location.href='{% url 'common:usedtrade_chat' chatroom.id %}'">
+                            <b>{{ chatroom.chat_list.last.author }}</b>
+                            <time>{{ chatroom.chat_list.last.create_date }}</time>
+                            <p>{{ chatroom.chat_list.last.content }}</p>
+                            <span>3</span>
+                        </li>
+                    {% endfor %}
+                </ul>
+            </div>
+            <div class="tolkDetail">
+                <div class="tolkSubject">
+                    <div class="imgBox" style="background-image: url({% static 'images/mypage_used_goods.png' %});">
+                        상품이미지
+                    </div>
+                    <p>
+                        아이패드 프로 11인치
+                        <strong>605,000원</strong>
+                    </p>
+                    <button>차단</button>
                 </div>
-                <div class="tolkDetail">
-                    <div class="tolkSubject">
-                        <div class="imgBox" style="background-image: url({% static 'images/mypage_used_goods.png' %});">
-                            상품이미지
-                        </div>
-                        <p>
-                            아이패드 프로 11인치
-                            <strong>605,000원</strong>
-                        </p>
-                        <button>차단</button>
-                    </div>
-                    <div class="tolkArea">
-                        {% for data in data %}
-                            {% if data.author == user %}
-                                <div class="opponentTolk">
-                                    <div class="imgBox"
-                                         style="background-image: url({% static  'images/mypage_used_user.png' %});">
-                                        김개똥 이미지
-                                    </div>
-                                    <blockquote>
-                                        <cite>{{ data.author }}</cite>
-                                        <q>{{ data.content }}</q>
-                                        <time>{{ data.create_date }}</time>
-                                    </blockquote>
+                <div class="tolkArea">
+                    {% for data in data %}
+                        {% if data.author == user %}
+                            <div class="opponentTolk">
+                                <div class="imgBox"
+                                     style="background-image: url({% static  'images/mypage_used_user.png' %});">
+                                    김개똥 이미지
                                 </div>
-                            {% else %}
-                                <div class="meTolk">
-                                    <blockquote>
-                                        <time>{{ data.create_date }}</time>
-                                        <q>{{ data.content }}</q>
-                                    </blockquote>
-                                </div>
-                                {#                                <span><time>2021년 11월 10일</time></span>#}
-                            {% endif %}
-                        {% endfor %}
-                        <div class="opponentTolk">
-                            <div class="imgBox"
-                                 style="background-image: url({% static  'images/mypage_used_user.png' %});">
-                                김개똥 이미지
+                                <blockquote>
+                                    <cite>{{ data.author }}</cite>
+                                    <q>{{ data.content }}</q>
+                                    <time>{{ data.create_date }}</time>
+                                </blockquote>
                             </div>
-                            <blockquote>
-                                <cite>김개똥</cite>
-                                <q>거래 요청 드려요~거래 요청 드려요~거래 요청 드려요~ 요청 드려요~ 요청 드려요~ 요청 드려요~</q>
-                                <time>오후 9:00</time>
-                            </blockquote>
-                        </div>
+                        {% else %}
+                            <div class="meTolk">
+                                <blockquote>
+                                    <time>{{ data.create_date }}</time>
+                                    <q>{{ data.content }}</q>
+                                </blockquote>
+                            </div>
+                            {#                                <span><time>2021년 11월 10일</time></span>#}
+                        {% endif %}
+                    {% endfor %}
+                </div>
 
-                        <span><time>2021년 11월 10일</time></span>
-                        <div class="meTolk">
-                            <blockquote>
-                                <time>오후 9:01</time>
-                                <q>잠시만요잠시만요잠시만요잠시만요잠시만요잠시만요잠시만요잠시만요잠시만요</q>
-                            </blockquote>
-                        </div>
-                    </div>
-
-                    <div class="inputArea">
-                        <input type="text">
-                        <button>입력</button>
-                    </div>
+                <div class="inputArea">
+                    <input type="text">
+                    <button>입력</button>
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
 
 
-    </div>
+</div>
 {% endblock %}
