--- a/templates/common/usedtrade_chat.html
+++ b/templates/common/usedtrade_chat.html
@@ -34,51 +34,54 @@
                         {% endfor %}
                     </ul>
                 </div>
-                {#                {% if info %}#}
-                <div class="tolkDetail">
-                    <div class="tolkSubject">
-                        <div class="imgBox"
-                             style="background-image: url('{{ info.0.file_set.last.file }}');">
-                            상품이미지
+                {% if info %}
+                    <div class="tolkDetail">
+                        <div class="tolkSubject">
+                            <div class="imgBox"
+                                 style="background-image: url('{{ info.0.file_set.last.file }}');">
+                                상품이미지
+                            </div>
+                            <p>
+                                {{ info.0.title }}
+                                <strong>{{ info.0.price }}원</strong>
+                            </p>
+                            <button>차단</button>
                         </div>
-                        <p>
-                            {{ info.0.title }}
-                            <strong>{{ info.0.price }}원</strong>
-                        </p>
-                        <button>차단</button>
-                    </div>
-                    {#                {% endif %}#}
-                    <div class="tolkArea">
-                        {% for data in data %}
-                            {% if data.author != user %}
-                                <div class="opponentTolk">
-                                    <div class="imgBox"
-                                         style="background-image: url({% static  'images/mypage_used_user.png' %});">
-                                        김개똥 이미지
+                        <div class="tolkArea">
+                            {% for data in data %}
+                                {% if data.author != user %}
+                                    <div class="opponentTolk">
+                                        <div class="imgBox"
+                                             style="background-image: url({% static  'images/mypage_used_user.png' %});">
+                                            김개똥 이미지
+                                        </div>
+                                        <blockquote>
+                                            <cite>{{ data.author }}</cite>
+                                            <q>{{ data.content }}</q>
+                                            <time>{{ data.create_date }}</time>
+                                        </blockquote>
                                     </div>
-                                    <blockquote>
-                                        <cite>{{ data.author }}</cite>
-                                        <q>{{ data.content }}</q>
-                                        <time>{{ data.create_date }}</time>
-                                    </blockquote>
-                                </div>
-                            {% else %}
-                                <div class="meTolk">
-                                    <blockquote>
-                                        <time>{{ data.create_date }}</time>
-                                        <q>{{ data.content }}</q>
-                                    </blockquote>
-                                </div>
-                                {#                                <span><time>2021년 11월 10일</time></span>#}
-                            {% endif %}
-                        {% endfor %}
-                    </div>
+                                {% else %}
+                                    <div class="meTolk">
+                                        <blockquote>
+                                            <time>{{ data.create_date }}</time>
+                                            <q>{{ data.content }}</q>
+                                        </blockquote>
+                                    </div>
+                                    {#                                <span><time>2021년 11월 10일</time></span>#}
+                                {% endif %}
+                            {% endfor %}
+                        </div>
 
-                    <div class="inputArea">
-                        <input type="text">
-                        <button>입력</button>
+                        <div class="inputArea">
+                            <input type="text">
+                            <button>입력</button>
+                        </div>
                     </div>
-                </div>
+                    {% else %}
+                    <p>채팅방이 없습니다.</p>
+                {% endif %}
+
             </div>
         </section>
 
