--- a/templates/common/signup.html
+++ b/templates/common/signup.html
@@ -8,49 +8,64 @@
                     <ul>
                         <li>
                             <label for="id_input">아이디</label>
-                            <input type="text" placeholder="아이디" id="id_input">
+                            <input type="text" placeholder="아이디" id="id_input" required>
                         </li>
                         <li>
                             <label for="pass_input">비밀번호</label>
-                            <input type="password" placeholder="비밀번호" id="pass_input">
+                            <input type="password" placeholder="비밀번호" id="pass_input" required>
                         </li>
                         <li>
                             <label for="pass_check_input">비밀번호 확인</label>
-                            <input type="password" placeholder="비밀번호 확인" id="pass_check_input">
+                            <input type="password" placeholder="비밀번호 확인" id="pass_check_input" required>
                         </li>
                         <li>
                             <label for="">이름</label>
-                            <input type="text" placeholder="이름을 입력해 주세요">
+                            <input type="text" placeholder="이름을 입력해 주세요" required>
                         </li>
                         <li>
                             <label for="">생년월일</label>
                             <div>
-                                <input type="text" placeholder="년(4자)" >
-                                <select>
-                                    <option value="">월</option>
+                                <input type="text" placeholder="년(4자)" required>
+                                <select name="month">
+                                    <option value="" disabled selected>월</option>
+                                    <option value="01">1</option>
+                                    <option value="02">2</option>
+                                    <option value="03">3</option>
+                                    <option value="04">4</option>
+                                    <option value="05">5</option>
+                                    <option value="06">6</option>
+                                    <option value="07">7</option>
+                                    <option value="08">8</option>
+                                    <option value="09">9</option>
+                                    <option value="10">10</option>
+                                    <option value="11">11</option>
+                                    <option value="12">12</option>
                                 </select>
-                                <select>
-                                    <option value="">일</option>
-                                </select>
+                                <input type="number" id="dd" placeholder="일">
+<!--                                <select name="day">-->
+<!--                                    <option value="1">1일</option>-->
+<!--                                    -->
+<!--                                </select>-->
                             </div>
                         </li>
                         <li>
                             <label for="">성별</label>
                             <select>
-                                <option value="">남</option>
+                                <option value="male">남</option>
+                                <option value="female">여</option>
                             </select>
                         </li>
                         <li>
                             <label for="">전화 번호 (선택)</label>
-                            <input type="text" placeholder="전화 번호를 입력해주세요.">
+                            <input type="tel" placeholder="전화 번호를 입력해주세요." required>
                         </li>
                         <li>
                             <label for="">이메일 주소</label>
                             <div>
-                                <input type="text" placeholder="이메일 주소를 입력해주세요">
+                                <input type="email" placeholder="이메일 주소를 입력해주세요" required>
                                 <button>인증번호 받기</button>
                             </div>
-                            <input type="text" placeholder="인증번호를 입력해주세요">
+                            <input type="text" placeholder="인증번호를 입력해주세요" required>
                         </li>
                     </ul>
                     <input type="submit" value="가입하기">
